GNOME Bugzilla – Bug 772702
Wrong spacing in the preferences popover in RTL
Last modified: 2016-10-10 20:27:11 UTC
Created attachment 337325 [details] Screenshot Same to bug 772701, wrong spacing in a popover in RTL. See the screenshot.
Created attachment 337350 [details] [review] perspectives: fix styling in perspective switcher for RTL This improves the padding for RTL to match that of LTR.
Thanks! Attachment 337350 [details] pushed as 5e4e6be - perspectives: fix styling in perspective switcher for RTL