perspectives: fix styling in perspective switcher for RTL

This improves the padding for RTL to match that of LTR.

https://bugzilla.gnome.org/show_bug.cgi?id=772702